# bot-kuraku

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  bot.py  ci.sh  docker-compose.yml  plugin-maimaidx-resources.yml  pyproject.toml  tatarubot2_conf.json
.github/workflows/: ci.yml  docker-image.yml  plugin-maimaidx-resources.yml  poetry-update.yml
all4one/: .env  Dockerfile  README.md  bot.py  pyproject.toml
bot/: .env  Dockerfile  README.md  bot.py  entry.sh  prestart.sh  pyproject.toml  start.sh  tatarubot2_conf.json
bot/data/: metadata_mixin.yaml
bot/data/maimaidx/: temp_pie.html
bot/data/metadata_mixin/: maimaiDX.json  tatarubot2.json
bot/data/super_ability_mahjong/: superMahjongData.json
bot/plugins/nonebot-plugin-kuraku-help/: README.md  pyproject.toml
bot/plugins/nonebot-plugin-kuraku-help/src/nonebot_plugin_kuraku_help/: __init__.py  help_text.py
bot/plugins/nonebot-plugin-qq-monitor/: README.md  pyproject.toml
bot/plugins/nonebot_plugin_hds/: __init__.py
bot/plugins/nonebot_plugin_kuraku_help/: help_text.py
bot/plugins/nonebot_plugin_qq_monitor/: notice.py  request.py
bot/plugins/nonebot_plugin_super_ability_mahjong/: __init__.py  main.py
data/autoreply/: replies.json
plugins/ff14/: README.md
plugins/ff14/plugins/ff14_fflogs/: __init__.py
plugins/ff14/plugins/ff14_gate/: data_source.py
plugins/nonebot_plugin_error_alert/: __init__.py  config.py  matcher.py
plugins/nonebot_plugin_hds/: __init__.py
plugins/nonebot_plugin_kuraku_help/: __init__.py  config.py  help_text.py  matcher.py
plugins/nonebot_plugin_kuraku_logs_retrieve/: __init__.py  pack.py
plugins/nonebot_plugin_logs_retrieve/: __init__.py
plugins/nonebot_plugin_qq_monitor/: config.py  notice.py
plugins/nonebot_plugin_super_ability_mahjong/: __init__.py  main.py
