[tool.poetry]
name = "bot-kuraku"
version = "1.0.0"
description = "bot-kuraku"
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc2"
nb-cli = "^0.6.7"
asyncpg = "^0.27.0"
nonebot-adapter-onebot = ">=2.1.5"
nonebot-plugin-gocqhttp-cross-machine-upload-file = ">=0.1.3"
nonebot-plugin-pixivbot = { extras = ["onebot", "postgresql"], version = ">=1.7.3" }
nonebot-plugin-mahjong-utils = ">=0.2.4"
nonebot-plugin-onebot-monitor = ">=0.1.2"
nonebot-plugin-mahjong-scoreboard = ">=0.1.9"
nonebot-plugin-majsoul = ">=0.1.2"
nonebot-plugin-access-control = ">=0.3.0"
nonebot_plugin_picstatus = ">=0.3.0"
nonebot-plugin-revoke = ">=0.1.0"

[tool.nonebot]
plugins = ["nonebot_plugin_mahjong_scoreboard", "nonebot_plugin_mahjong_utils", "nonebot_plugin_majsoul",
    "nonebot_plugin_pixivbot",
    "nonebot_plugin_onebot_monitor", "nonebot_plugin_access_control", "nonebot_plugin_picstatus", "nonebot_plugin_revoke"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
