[tool.poetry]
name = "bot-kuraku-all4one"
version = "1.0.0"
description = "bot-kuraku-all4one"
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^68.2.0"
nonebot2 = { extras = ["fastapi", "websockets", "httpx"], version = "^2.0.0" }
nb-cli = "^1.0.5"
nonebot-adapter-onebot = ">=2.1.5"
nonebot-adapter-qqguild = ">=0.2.2"
nonebot-adapter-kaiheila = ">=0.2.6"
nonebot-adapter-telegram = ">=0.1.0b13"
nonebot-adapter-red = ">=0.5.0"
nonebot-plugin-all4one = ">=0.1.0a3"

[tool.nonebot]
adapters = []
plugins = ["nonebot_plugin_all4one"]
plugin_dirs = []
builtin_plugins = []

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
