[tool.pdm]
distribution = false

[project]
name = "bot-kuraku-bot"
version = "1.0.0"
description = "bot-kuraku-bot"
authors = [
    {name = "ssttkkl", email = "huang.wen.long@hotmail.com"},
]
dependencies = [
    "setuptools<71.0.0,>=70.0.0",
    "nonebot2[fastapi,httpx]<3.0.0,>=2.3.0",
    "nb-cli>=1.0.5",
    "asyncpg>=0.27.0",
    "httpx[socks]>=0.23.0",
    "aiohttp-socks>=0.9.0",
    "nonebot-adapter-onebot>=2.1.5",
    "nonebot-adapter-qq>=1.6.1",
    "nonebot-plugin-picstatus>=0.3.0",
    "nonebot-plugin-revoke>=0.1.0",
    "nonebot-plugin-autoreply>=0.2.3",
    "nonebot-plugin-follow-withdraw>=0.2.0",
    "nonebot-plugin-htmlrender>=0.2.2",
    "nonebot-plugin-githubcard>=0.1.5",
#    "nonebot-plugin-maimaidx>=1.0.13",
    "tatarubot2>=1.0",
]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "-e file:///${PROJECT_ROOT}/plugins/nonebot-plugin-access-control",
    "-e file:///${PROJECT_ROOT}/plugins/nonebot-plugin-access-control-api",
    "-e file:///${PROJECT_ROOT}/plugins/nonebot-plugin-escape-url",
    "-e file:///${PROJECT_ROOT}/plugins/nonebot-plugin-kuraku-help",
    "-e file:///${PROJECT_ROOT}/plugins/nonebot-plugin-mahjong-scoreboard",
    "-e file:///${PROJECT_ROOT}/plugins/nonebot-plugin-mahjong-utils",
    "-e file:///${PROJECT_ROOT}/plugins/nonebot-plugin-majsoul",
    "-e file:///${PROJECT_ROOT}/plugins/nonebot-plugin-pixivbot",
    "-e file:///${PROJECT_ROOT}/plugins/nonebot-plugin-qq-monitor",
    "-e file:///${PROJECT_ROOT}/plugins/ssttkkl-nonebot-utils"
]

[tool.nonebot]
plugins = [
    "nonebot_plugin_access_control",
    "nonebot_plugin_escape_url",
    "nonebot_plugin_kuraku_help",
    "nonebot_plugin_mahjong_scoreboard",
    "nonebot_plugin_mahjong_utils",
    "nonebot_plugin_majsoul",
    "nonebot_plugin_pixivbot",
    "nonebot_plugin_qq_monitor",

    "nonebot_plugin_autoreply",
    "nonebot_plugin_follow_withdraw",
    "nonebot_plugin_picstatus",
    "nonebot_plugin_revoke",
#    "nonebot_plugin_nagabus",
    "nonebot_plugin_githubcard",
    "tatarubot2",
#    "nonebot_plugin_maimaidx"
]